# Agentic-Travel

./: .env.example  .gitignore  LICENSE  README.md
backend/: README.md  pyproject.toml
backend/src/agentic_travel/: __init__.py
backend/src/agentic_travel/agents/: __init__.py  base.py  coordinator.py  destination.py  enrichment.py  heuristic.py  intent.py  models.py  planning.py  synthesizer.py
backend/src/agentic_travel/api/: __init__.py  agui.py  app.py  architecture.py  dependencies.py
backend/src/agentic_travel/config/: __init__.py  settings.py
backend/src/agentic_travel/data/: __init__.py  city_guides.json  climate.json  dining.json  flight_routes.json  graph_seed.json  hotels.json  loader.py  personas.json  visa_rules.json
backend/src/agentic_travel/domain/: __init__.py  fx.py  geo.py  money.py  traveler.py
backend/src/agentic_travel/graph/: __init__.py  models.py  store.py
backend/src/agentic_travel/integrations/: __init__.py  adk_planner.py
backend/src/agentic_travel/itinerary/: __init__.py  models.py  validation.py
backend/src/agentic_travel/llm/: __init__.py  client.py
backend/src/agentic_travel/mcp_servers/: __init__.py  flights.py  hotels.py  memory.py  poi_graph.py  visa.py  weather.py
backend/src/agentic_travel/observability/: __init__.py  collector.py  cost.py  events.py  span.py  tracer.py
backend/src/agentic_travel/services/: __init__.py
backend/src/agentic_travel/services/dining/: __init__.py  models.py  service.py
backend/src/agentic_travel/services/flights/: __init__.py  models.py  service.py
backend/src/agentic_travel/services/guide/: __init__.py  models.py  service.py
backend/src/agentic_travel/services/hotels/: __init__.py  models.py  service.py
backend/src/agentic_travel/services/memory/: __init__.py  models.py  service.py
backend/src/agentic_travel/services/visa/: __init__.py  models.py  service.py
backend/src/agentic_travel/services/weather/: __init__.py  models.py  service.py
backend/tests/: test_smoke.py
backend/tests/agents/: test_coordinator.py  test_heuristic.py  test_intent_enrichment.py  test_planning.py  test_synthesizer.py
backend/tests/api/: test_app.py
backend/tests/config/: test_settings.py
backend/tests/data/: test_loader.py
backend/tests/domain/: test_fx.py  test_geo.py  test_money.py  test_traveler.py
backend/tests/graph/: test_models.py  test_store.py
backend/tests/integrations/: test_adk_planner.py
backend/tests/itinerary/: test_validation.py
backend/tests/llm/: test_client.py
backend/tests/mcp_servers/: test_servers.py
backend/tests/observability/: test_collector.py  test_cost.py  test_span.py  test_tracer.py
backend/tests/services/dining/: test_service.py
backend/tests/services/flights/: test_service.py
backend/tests/services/guide/: test_service.py
backend/tests/services/hotels/: test_service.py
backend/tests/services/memory/: test_service.py
backend/tests/services/visa/: test_service.py
backend/tests/services/weather/: test_service.py
docs/design/: 2026-06-26-agentic-travel-design.md  adr-0001-agent-orchestration.md
frontend/: .env.example  README.md  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
(+10 files in other folders)
