[project]
name = "agentic-travel"
version = "0.1.0"
description = "Multi-agent AI travel planner that produces bookable itineraries."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Vikas Mishra" }]
dependencies = [
    "ag-ui-protocol>=0.1.7",
    "fastapi>=0.115",
    "google-adk[a2a]>=1.0",
    "google-genai>=1.0",
    "mcp>=1.12",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_travel"]

[tool.hatch.build.targets.wheel.force-include]
"src/agentic_travel/data/graph_seed.json" = "agentic_travel/data/graph_seed.json"
"src/agentic_travel/data/flight_routes.json" = "agentic_travel/data/flight_routes.json"
"src/agentic_travel/data/hotels.json" = "agentic_travel/data/hotels.json"
"src/agentic_travel/data/visa_rules.json" = "agentic_travel/data/visa_rules.json"
"src/agentic_travel/data/climate.json" = "agentic_travel/data/climate.json"
"src/agentic_travel/data/personas.json" = "agentic_travel/data/personas.json"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
files = ["src", "tests"]
